@@ -1,5 +1,6 @@
 package com.user.controller;
 
+import java.net.http.HttpHeaders;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -7,15 +8,26 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
+import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.client.RestTemplate;
+import org.springframework.web.servlet.view.RedirectView;
 
 import com.googleAPI.GeocodingService;
+import com.hotelImg.model.HotelImgService;
+import com.hotelImg.model.HotelImgVO;
+import com.order.model.OrderService;
 import com.price.model.PriceRepository;
 import com.price.model.PriceService;
 import com.price.model.PriceVO;
@@ -23,6 +35,8 @@ import com.roomInventory.model.RoomInventoryDTO;
 import com.roomInventory.model.RoomInventoryRepository;
 import com.roomInventory.model.RoomInventoryService;
 import com.roomInventory.model.RoomInventoryVO;
+import com.roomTypeImg.model.RoomTypeImgService;
+import com.roomTypeImg.model.RoomTypeImgVO;
 
 @RestController
 @RequestMapping("/booking/api")
@@ -38,22 +52,31 @@ public class UserBookingController {
 	PriceService Pservice;
 	@Autowired
 	GeocodingService gService;
+	@Autowired
+	RoomTypeImgService roomTypeImgService;
+	@Autowired
+	HotelImgService hotelImgService;
+	@Autowired
+	OrderService orderService;
 
 	@PostMapping("/all_inventory")
-    public List<Map<String, Object>> getRoomCountsByDate() {
-        return RIservice.getRoomCountsByDate();
-    }
-	
+	public List<Map<String, Object>> getRoomCountsByDate() {
+		return RIservice.getRoomCountsByDate();
+	}
+
 	@PostMapping("/search")
-	public Map<String, Object> search(@RequestBody Map<String, String> searchCondition, HttpSession session) {
+	public Map<String, String> search(@RequestBody Map<String, String> searchCondition, HttpServletRequest req,
+			HttpSession session) {
+		String serverName = req.getServerName();
+		int serverPort = req.getServerPort();
 		Integer guestNum = Integer.valueOf(searchCondition.get("guestNum"));
 		Integer roomNum = Integer.valueOf(searchCondition.get("roomNum"));
 		LocalDate checkInDate = LocalDate.parse(searchCondition.get("checkInDate"));
-		LocalDate checkOutDateMOne = LocalDate.parse(searchCondition.get("checkOutDate")).minusDays(1);
+		LocalDate checkOutDate = LocalDate.parse(searchCondition.get("checkOutDate"));
 		String place = searchCondition.get("place");
 		Double lat = 0.0;
 		Double lnt = 0.0;
-		if (place.trim().isEmpty() || place == null) {
+		if (place == null || place.trim().isBlank()) {
 			lat = Double.valueOf(searchCondition.get("lat"));
 			lnt = Double.valueOf(searchCondition.get("lnt"));
 		} else {
@@ -62,84 +85,184 @@ public class UserBookingController {
 			lnt = latLnt[1];
 		}
 
-		Map<String, Object> resList = new LinkedHashMap<>(); // 最終返回的結果
+		session.setAttribute("guestNum", guestNum);
+		session.setAttribute("roomNum", roomNum);
+		session.setAttribute("checkInDate", checkInDate);
+		session.setAttribute("checkOutDate", checkOutDate);
+		session.setAttribute("lat", lat);
+		session.setAttribute("lnt", lnt);
+		System.out.println("set OK");
+
+		Map<String, String> response = new HashMap<String, String>();
+		response.put("url", "/user/search");
+		return response;
+	}
+
+    @GetMapping("/image/room/{imageId}")
+    public ResponseEntity<byte[]> getRoomImage(@PathVariable Integer imageId) {
+        RoomTypeImgVO roomTypeImg = roomTypeImgService.findById(imageId);
+        return ResponseEntity.ok()
+                .contentType(MediaType.IMAGE_JPEG) // 假設圖片為 JPEG 格式
+                .body(roomTypeImg.getPicture());
+    }
+    
+    // 返回具體圖片數據
+    @GetMapping("/image/hotel/{imageId}")
+    public ResponseEntity<byte[]> getHotelImage(@PathVariable Integer imageId) {
+        HotelImgVO hotelImg = hotelImgService.getImageById(imageId);
+        return ResponseEntity.ok()
+                .contentType(MediaType.IMAGE_JPEG)
+                .body(hotelImg.getPicture());
+    }
+
+
+	@PostMapping("/map_search")
+	public Map<String, String> mapSearch(@RequestBody Map<String, String> searchCondition, HttpSession session) {
+		Double lat = Double.valueOf(searchCondition.get("lat"));
+		Double lnt = Double.valueOf(searchCondition.get("lnt"));
+		session.setAttribute("lat", lat);
+		session.setAttribute("lnt", lnt);
+		Map<String, String> response = new HashMap<String, String>();
+		response.put("message", "成功");
+		return response;
+
+	}
+
+	@PostMapping("/search_result")
+	public Map<String, Object> searchResult(HttpSession session) {
+		// 1. 解析前端傳進來的參數
+		Integer guestNum = (Integer) session.getAttribute("guestNum");
+		Integer roomNum = (Integer) session.getAttribute("roomNum");
+		LocalDate checkInDate = (LocalDate) session.getAttribute("checkInDate");
+		LocalDate checkOutDate = (LocalDate) session.getAttribute("checkOutDate");
+		LocalDate checkOutDateMOne = checkOutDate.minusDays(1);
+		Double lat = (Double) session.getAttribute("lat");
+		Double lnt = (Double) session.getAttribute("lnt");
+		
+		// 2. 準備最終回傳結構
+		Map<String, Object> resList = new LinkedHashMap<>();
+		resList.put("myLat", lat);
+		resList.put("myLnt", lnt);
 		resList.put("guestNum", guestNum);
 		resList.put("roomNum", roomNum);
 		resList.put("checkInDate", checkInDate);
-		resList.put("checkOutDate", searchCondition.get("checkOutDate"));
+		resList.put("checkOutDate", checkOutDate);
 
-		List<RoomInventoryDTO> result = RIservice.findAvailableRooms(checkInDate, checkOutDateMOne, lat, lnt, 0.3);
-		
+		// 新增用於存放所有飯店資訊的 ArrayList
+		List<Map<String, Object>> hotels = new ArrayList<>();
+
 		try {
-			for (RoomInventoryDTO r : result) {
-				boolean isRoomAvailableEveryDay = true;
+			// 3. 一次撈取符合搜尋條件的所有房型
+			List<RoomInventoryDTO> allRoomData = RIservice.findAvailableRooms(checkInDate, checkOutDateMOne, lat, lnt,
+					0.05);
 
-				Map<LocalDate, Integer> dailyAvailableRooms = new HashMap<>();
-				for (LocalDate date = checkInDate; !date.isAfter(checkOutDateMOne); date = date.plusDays(1)) {
-					RoomInventoryVO ri = RIservice.findByRoomTypeIdAndDate(r.getRoomTypeId(), date);
-					Integer needRooms = (guestNum + r.getMaxPerson() - 1) / r.getMaxPerson();
-					System.out.println(date + "is checking ,RoomID:" + r.getRoomTypeId());
-					System.out.println(
-							"Max Cap:" + r.getMaxPerson() + "Need Room:" + needRooms + ", want room:" + roomNum);
-					if (ri == null || ri.getAvailableQuantity() == null || ri.getAvailableQuantity() < needRooms
-							|| needRooms > roomNum) {
-						isRoomAvailableEveryDay = false;
-						break;
+			// 4. 將資料分組
+			Map<Integer, Map<Integer, List<RoomInventoryDTO>>> groupedData = new LinkedHashMap<>();
+			for (RoomInventoryDTO dto : allRoomData) {
+				Integer hotelId = dto.getHotelId();
+				Integer roomTypeId = dto.getRoomTypeId();
+
+				groupedData.computeIfAbsent(hotelId, k -> new LinkedHashMap<>())
+						.computeIfAbsent(roomTypeId, k -> new ArrayList<>()).add(dto);
+			}
+
+			// 5. 依各飯店處理資料
+			for (Map.Entry<Integer, Map<Integer, List<RoomInventoryDTO>>> hotelEntry : groupedData.entrySet()) {
+				Integer hotelId = hotelEntry.getKey();
+				Map<Integer, List<RoomInventoryDTO>> roomMap = hotelEntry.getValue();
+
+				// 準備飯店的資料結構
+				Map<String, Object> hotelData = new LinkedHashMap<>();
+				RoomInventoryDTO anyDtoInHotel = roomMap.entrySet().iterator().next().getValue().get(0);
+				Double ratings = orderService.getAvgRatingAndCommentCounts(hotelId).getAvgRating();
+				long comments = orderService.getAvgRatingAndCommentCounts(hotelId).getCommentCount();
+
+				hotelData.put("hotelID", hotelId);
+				hotelData.put("hotel", anyDtoInHotel.getName());
+				hotelData.put("city", anyDtoInHotel.getCity());
+				hotelData.put("district", anyDtoInHotel.getDistrict());
+				hotelData.put("address", anyDtoInHotel.getAddress());
+				hotelData.put("lat", anyDtoInHotel.getLatitude());
+				hotelData.put("lng", anyDtoInHotel.getLongitude());
+				hotelData.put("ratings", ratings);
+				hotelData.put("comments", comments);
+
+				// 處理飯店底下的各房型
+				List<Map<String, Object>> rooms = new ArrayList<>();
+				for (Map.Entry<Integer, List<RoomInventoryDTO>> roomTypeEntry : roomMap.entrySet()) {
+					Integer roomTypeId = roomTypeEntry.getKey();
+					List<RoomInventoryDTO> dailyList = roomTypeEntry.getValue();
+
+					// 建立每日房型的可用資訊
+					Map<LocalDate, RoomInventoryDTO> dateMap = new HashMap<>();
+					for (RoomInventoryDTO d : dailyList) {
+						dateMap.put(d.getDate(), d);
 					}
 
-					dailyAvailableRooms.put(date, ri.getAvailableQuantity());
+					RoomInventoryDTO sample = dailyList.get(0);
+					int maxPerson = sample.getMaxPerson();
+					int needRooms = (guestNum + maxPerson - 1) / maxPerson;
+
+					if (needRooms > roomNum) {
+						continue;
+					}
+
+					boolean isRoomAvailableEveryDay = true;
+					Map<LocalDate, Integer> dailyAvailableRooms = new LinkedHashMap<>();
+					LocalDate currentDate = checkInDate;
+					while (!currentDate.isAfter(checkOutDateMOne)) {
+						RoomInventoryDTO dayDto = dateMap.get(currentDate);
+						if (dayDto == null || dayDto.getAvailableQuantity() < needRooms) {
+							isRoomAvailableEveryDay = false;
+							break;
+						}
+						dailyAvailableRooms.put(currentDate, dayDto.getAvailableQuantity());
+						currentDate = currentDate.plusDays(1);
+					}
+
+					if (!isRoomAvailableEveryDay) {
+						continue;
+					}
+
+					// 整理房型資訊
+					Map<String, Object> roomDetails = new LinkedHashMap<>();
+					roomDetails.put("roomTypeID", roomTypeId);
+					roomDetails.put("roomType", sample.getRoomName());
+					roomDetails.put("maxPerson", maxPerson);
+					roomDetails.put("breakfast", sample.getBreakfast());
+
+					// 整理每日資訊
+					List<Map<String, Object>> availableDates = new ArrayList<>();
+					LocalDate dateForPrice = checkInDate;
+					while (!dateForPrice.isAfter(checkOutDateMOne)) {
+						Map<String, Object> dailyDetails = new LinkedHashMap<>();
+						dailyDetails.put("date", dateForPrice.toString());
+						dailyDetails.put("roomNumAvailable", dailyAvailableRooms.get(dateForPrice));
+
+						PriceVO dailyPrice = Pservice.getPriceOfDay(roomTypeId, dateForPrice);
+						dailyDetails.put("priceType", dailyPrice != null ? dailyPrice.getPriceType() : null);
+						dailyDetails.put("price", dailyPrice != null ? dailyPrice.getPrice() : null);
+						dailyDetails.put("breakfastPrice", dailyPrice != null ? dailyPrice.getBreakfastPrice() : null);
+
+						availableDates.add(dailyDetails);
+						dateForPrice = dateForPrice.plusDays(1);
+					}
+					roomDetails.put("dates", availableDates);
+					rooms.add(roomDetails);
 				}
-
-				if (!isRoomAvailableEveryDay) {
-					System.out.println(
-							"RoomTypeId " + r.getRoomTypeId() + " is not available for all dates. Skipping...");
-					continue; // 若某天房間不足，直接跳過這個房型
-				}
-
-				// 整合符合條件的房型資料
-				String hotelKey = "hotel" + r.getHotelId();
-				Map<String, Object> hotelList;
-				if (!resList.containsKey(hotelKey)) {
-					hotelList = new LinkedHashMap<>();
-					hotelList.put("hotelID", r.getHotelId());
-					hotelList.put("hotel", r.getName());
-					hotelList.put("city", r.getCity());
-					hotelList.put("district", r.getDistrict());
-					hotelList.put("address", r.getAddress());
-					hotelList.put("lat", r.getLatitude());
-					hotelList.put("longitude", r.getLongitude());
-					resList.put(hotelKey, hotelList);
-				} else {
-					hotelList = (Map<String, Object>) resList.get(hotelKey);
-				}
-
-				Map<String, Object> roomDetails = new LinkedHashMap<>();
-				roomDetails.put("roomTypeID", r.getRoomTypeId());
-				roomDetails.put("roomType", r.getRoomName());
-				roomDetails.put("maxPerson", r.getMaxPerson());
-				roomDetails.put("breakfast", r.getBreakfast());
-
-				// 添加每日價格和日期資料
-				List<Map<String, Object>> availableDates = new ArrayList<>();
-				for (LocalDate date = checkInDate; !date.isAfter(checkOutDateMOne); date = date.plusDays(1)) {
-					PriceVO dailyPrice = Pservice.getPriceOfDay(r.getRoomTypeId(), date);
-
-					Map<String, Object> dailyDetails = new LinkedHashMap<>();
-					dailyDetails.put("date", date.toString());
-					dailyDetails.put("roomNumAvalible", dailyAvailableRooms.get(date));
-					dailyDetails.put("priceType", dailyPrice.getPriceType());
-					dailyDetails.put("price", dailyPrice.getPrice());
-					dailyDetails.put("breakfastPrice", dailyPrice.getBreakfastPrice());
-
-					availableDates.add(dailyDetails);
-				}
-
-				roomDetails.put("dates", availableDates);
-				hotelList.put("ROOM" + r.getRoomTypeId(), roomDetails);
+				hotelData.put("rooms", rooms);
+				hotels.add(hotelData);
 			}
+
+			// 將飯店清單加入回傳結構
+			resList.put("hotels", hotels);
+
 		} catch (Exception e) {
-			resList.put("message", e);			
+			resList.put("error", e.getMessage());
+			resList.put("message", "搜尋有誤，請確認地點、日期、房間等資料是否正確輸入");
 		}
+
 		return resList;
 	}
+
 }
